# tale-weaver

./: .dockerignore  .env_example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/: app.py
src/tale_weaver/: crew.py  main.py
src/tale_weaver/config/: agents.yaml  tasks.yaml
src/tale_weaver/model/: storybook.py
src/tale_weaver/tools/: custom_tool.py
src/tale_weaver/utils/: pdf_generator.py
