[project]
name = "tale_weaver"
version = "0.1.0"
description = "tale-weaver using crewAI"
authors = [{ name = "Valerio Capozio"}]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "google-genai==1.32.0",
    "pydantic==2.11.7",
    "reportlab==4.4.3",
    "streamlit==1.49.1"
]

[project.scripts]
tale_weaver = "tale_weaver.main:run"
run_crew = "tale_weaver.main:run"
train = "tale_weaver.main:train"
replay = "tale_weaver.main:replay"
test = "tale_weaver.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
